# aisp_ros_control_template

./: CMakeLists.txt  README.md  package.xml
cfg/: aisp_kinematics.yaml  sim_aisp_cobotta_1.yaml  sim_aisp_cobotta_2.yaml  sim_aisp_vs050_1.yaml  sim_aisp_vs050_2.yaml
launch/: run_simulation.launch  sas_robot_kinematics_constrained_multiarm.launch  sim_aisp_cobotta_1.launch  sim_aisp_cobotta_2.launch  sim_aisp_vs050_1.launch  sim_aisp_vs050_2.launch
scripts/: aisp_kinematics_control_example.py
